--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h2>乡村里的守望者的博客</h2>
+        <h1>乡村里的守望者's Blog</h1>
         <h2>My first blog</h2>
         <a href="https://github.com/xcldswz" class="button"><small>Follow me on</small> GitHub</a>
       </div>
