--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>乡村里的守望者的博客</h1>
-        <h2>My first blog</h2>
+        <h1>Xcldswz's Blog</h1>
+        <h2>The Watcher of the Country</h2>
         <a href="https://github.com/xcldswz" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
