--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-         <h1>乡村里的守望者个人博客打造中，敬请期待！</h1>
+         <p></p>
+          <p></p>
+         <h1>乡村里的守望者个人博客打造中，<br/>
+           &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp敬请期待！</h1>
         </section>
 
         <aside id="sidebar">
@@ -42,7 +45,7 @@
           &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp喜欢读书交友<br/>
           &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp愿以文会友<br/>
           &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp谈读书、谈技术<br/>
-          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp也可以在<a href="http://www.jianshu.com/users/e67611a6379b/latest_articles">简书</a>阅读我的文章 
+          &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp欢迎在<a href="http://www.jianshu.com/users/e67611a6379b/latest_articles">简书</a>关注我 
           </p>
           
         </aside>
