--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-         <p></p>
-          <p></p>
-         <h1>乡村里的守望者个人博客打造中，<br/>
-           &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp敬请期待！</h1>
+         
+         <h1 style="color:red;text-align:center">乡村里的守望者个人博客打造中，<br/>
+           敬请期待！</h1>
         </section>
 
         <aside id="sidebar">
