--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -6,7 +6,7 @@ icon: glyphicon-play
 ---
 <div id="fall">
 	<!-- 第一列 -->
-	<ul>
+	<!-- <ul>
 		
 		<li>
 			<a href="http://gaohaoyang.github.io/ife/task/task0002/work/Gaohaoyang/index.html">
@@ -25,5 +25,26 @@ icon: glyphicon-play
 			</div>
 		</li>
 		
-	</ul>
+	</ul> -->
+	<ul>
+		
+		<li>
+			<a href="http://www.jianshu.com/c/836abec5e84c">
+				<img src="http://upload-images.jianshu.io/upload_images/3845101-60bfe867ce3d8df6.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50">
+			</a>
+			<div class="head">
+				<a href="http://www.jianshu.com/u/e67611a6379b">
+					乡村里的守望者的主页
+				</a>
+			</div>
+			<div class="description">
+				<p>主要内容：编程硬件</p>
+				<p>
+					最近的文章。<a href="http://www.jianshu.com/p/1555772d8bda">纯原生 App开发模式还能走多久？</a>
+				</p>
+			</div>
+		</li>
+		
+	</ul> 
+	
 </div>
