--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -34,7 +34,7 @@ icon: glyphicon-heart
 			</a>
 			<div class="head">
 				<a href="http://www.jianshu.com/u/e67611a6379b">
-					乡村里的守望者的主页
+					IoTers的主页
 				</a>
 			</div>
 			<div class="description">
