--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -47,4 +47,25 @@ icon: glyphicon-heart
 		
 	</ul> 
 	
+	<ul>
+		
+		<li>
+			<a href="http://www.jianshu.com/c/836abec5e84c">
+				<img src="./pic/pj1.jpg">
+			</a>
+			<div class="head">
+				<a href="http://www.jianshu.com/u/e67611a6379b">
+					IoTers的主页
+				</a>
+			</div>
+			<div class="description">
+				<p>主要内容：编程硬件</p>
+				<p>
+					最近的文章。<a href="http://www.jianshu.com/p/1555772d8bda">纯原生 App开发模式还能走多久？</a>
+				</p>
+			</div>
+		</li>
+		
+	</ul> 
+	
 </div>
