--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -51,7 +51,7 @@ icon: glyphicon-heart
 		
 		<li>
 			<a href="http://www.jianshu.com/c/836abec5e84c">
-				<img src="./pic/pj1.jpg">
+				<img src="http://upload-images.jianshu.io/upload_images/3845101-87ddb72b457e18af.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
 			</a>
 			<div class="head">
 				<a href="http://www.jianshu.com/u/e67611a6379b">
