--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -29,18 +29,18 @@ icon: glyphicon-heart
 	<ul>
 		
 		<li>
-			<a href="http://www.jianshu.com/c/836abec5e84c">
-				<img src="http://upload-images.jianshu.io/upload_images/3845101-60bfe867ce3d8df6.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1080/q/50">
-			</a>
+			
+				<img src="http://upload-images.jianshu.io/upload_images/3845101-4120400707bcbb46.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
+			
 			<div class="head">
 				<a href="http://www.jianshu.com/u/e67611a6379b">
-					IoTers的主页
+					简书主页
 				</a>
 			</div>
 			<div class="description">
 				<p>主要内容：编程硬件</p>
 				<p>
-					最近的文章。<a href="http://www.jianshu.com/p/1555772d8bda">纯原生 App开发模式还能走多久？</a>
+					最近的文章：<a href="http://www.jianshu.com/p/1555772d8bda">纯原生 App开发模式还能走多久？</a>
 				</p>
 			</div>
 		</li>
