--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -29,11 +29,12 @@ icon: glyphicon-heart
 	<ul>
 		
 		<li>
+			<a href="http://www.jianshu.com/u/e67611a6379b"
 			
 				<img src="http://upload-images.jianshu.io/upload_images/3845101-4120400707bcbb46.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
-			
+			</a>
 			<div class="head">
-				<a href="http://www.jianshu.com/u/e67611a6379b">
+				<a href="#">
 					简书主页
 				</a>
 			</div>
@@ -50,18 +51,18 @@ icon: glyphicon-heart
 	<ul>
 		
 		<li>
-			<a href="http://www.jianshu.com/c/836abec5e84c">
-				<img src="http://upload-images.jianshu.io/upload_images/3845101-10d2c4142ae16bae.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
+			<a href="https://v.qq.com/x/page/r0502w470lw.html">
+				<img src="http://upload-images.jianshu.io/upload_images/3845101-64a7b86ed1a8b861.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
 			</a>
 			<div class="head">
-				<a href="http://www.jianshu.com/u/e67611a6379b">
-					IoTers的主页
+				<a href="#">
+					基于物联网的亲子农场
 				</a>
 			</div>
 			<div class="description">
-				<p>主要内容：编程硬件</p>
+				<p>主要内容：演示项目功能</p>
 				<p>
-					最近的文章。<a href="http://www.jianshu.com/p/1555772d8bda">纯原生 App开发模式还能走多久？</a>
+					包含手机端APP控制及自动控制
 				</p>
 			</div>
 		</li>
