--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -29,7 +29,7 @@ icon: glyphicon-heart
 	<ul>
 		
 		<li>
-			<a href="http://www.jianshu.com/u/e67611a6379b"
+			<a href="http://www.jianshu.com/u/e67611a6379b">
 			
 				<img src="http://upload-images.jianshu.io/upload_images/3845101-4120400707bcbb46.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
 			</a>
