--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -62,7 +62,7 @@ icon: glyphicon-heart
 			<div class="description">
 				<p>主要内容：演示项目功能</p>
 				<p>
-					包含手机端APP控制及自动控制
+					包含手机端APP及自动控制
 				</p>
 			</div>
 		</li>
