--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -69,4 +69,26 @@ icon: glyphicon-heart
 		
 	</ul> 
 	
+	
+	<ul>
+		
+		<li>
+			<a href="https://v.qq.com/x/page/h05029lkcof.html">
+				<img src="http://www.jianshu.com/writer#/notebooks/7965376/notes/12312851">
+			</a>
+			<div class="head">
+				<a href="#">
+					智能体感式交互机器人
+				</a>
+			</div>
+			<div class="description">
+				<p>主要内容：演示项目功能</p>
+				<p>
+					主从式机器人
+				</p>
+			</div>
+		</li>
+		
+	</ul> 
+	
 </div>
