--- a/pages/1idea.html
+++ b/pages/1idea.html
@@ -74,7 +74,7 @@ icon: glyphicon-heart
 		
 		<li>
 			<a href="https://v.qq.com/x/page/h05029lkcof.html">
-				<img src="http://www.jianshu.com/writer#/notebooks/7965376/notes/12312851">
+				<img src="http://upload-images.jianshu.io/upload_images/3845101-fdc2c374e695f32e.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240">
 			</a>
 			<div class="head">
 				<a href="#">
