--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			        	
 			        	<span class="say">我们彼此珍惜着这份来之不易的感情</span><br>
 <span class="say">希望在以后的路上能陪伴着你</span><br>
-<span class="say">一生一世</span><br>
+<span class="say">一生一世（by xcldswz）</span><br>
 
 </p>
       </div>
